# FLAST

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  result.txt
.github/workflows/: ci.yml
flast.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
py/: __init__.py  compare_pinto.py  eff_eff.py  flast.py  params.py
results/: compare-pinto.csv  eff-eff.csv  eff-eff.sync-conflict-20221122-163211-M5TAS6H.csv
src/: __init__.py  compare_pinto.py  eff_eff.py  flast.py  flast_enhanced.py  params.py
tests/: __init__.py  conftest.py  test_flast.py  test_flast_enhanced.py
